--- a/dada/templates/validate_update_email_widget.tmpl
+++ b/dada/templates/validate_update_email_widget.tmpl
@@ -50,10 +50,9 @@
 			<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 		
 				<input type="hidden" name="flavor" value="validate_update_email" > 
-				<input type="hidden" name="email" value="<!-- tmpl_var email -->" > 
-				<input type="hidden" name="updated_email" value="<!-- tmpl_var updated_email -->" >
+				<input type="hidden" name="email" value="<!-- tmpl_var email escape="HTML" -->" > 
+				<input type="hidden" name="updated_email" value="<!-- tmpl_var updated_email escape="HTML" -->" >
 				<input type="hidden" name="process" value="1" > 
-
 
 			<!-- tmpl_loop update_list_validation --> 
 
@@ -69,7 +68,13 @@
 		
 						<!-- tmpl_if status --> 
 							<p>
-								<input type="checkbox" name="update_list" id="<!-- tmpl_var list_settings.list -->:<!-- tmpl_var type -->" value="<!-- tmpl_var list_settings.list -->:<!-- tmpl_var type -->" checked="checked" >
+								<input 
+									type="checkbox" 
+									name="update_list" 
+									id="<!-- tmpl_var list_settings.list -->:<!-- tmpl_var type -->" 
+									value="<!-- tmpl_var list_settings.list -->:<!-- tmpl_var type -->" 
+									checked="checked"
+								>
 								<label for="<!-- tmpl_var list_settings.list -->:<!-- tmpl_var type -->">
 									<!-- tmpl_var type_label -->
 								</label>
@@ -92,7 +97,11 @@
 
 	
 
-			<input type="submit" value="Update Subscription of: <!-- tmpl_var email --> to, <!-- tmpl_var updated_email -->" class="success button" >
+			<input 
+				type="submit" 
+				value="Update Subscription of: <!-- tmpl_var email --> to, <!-- tmpl_var updated_email -->" 
+				class="success button"
+			>
 		</form> 
 		
 		<!-- /tmpl_if --> 
