Adding a Youtube button!

--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -249,6 +249,27 @@
     </div>
  </div>
  
+ 
+ <div class="row">
+ 	<div class="large-3 medium-3 columns">
+ 	    <label 
+ 			class="medium-text-right"
+ 			for="facebook_page_url"
+ 		>
+          	Youtube Channel URL
+ 		</label>
+ 	</div>
+ 	<div class="large-9 medium-9 columns">
+      	<input 
+ 			type="text" 
+ 			name="youtube_url" 
+ 			id="youtube_url" 
+ 			value="<!-- tmpl_var list_settings.youtube_url escape="HTML" -->"
+ 			placeholder="https://"
+ 		>
+     </div>
+  </div>
+
 <div class="row">
 	<div class="large-3 medium-3 columns">
 	    <label 
