Let's give these props in a easier way...

--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -61,14 +61,7 @@
 </div> 
 
 
-<!-- tmpl_if footer_props -->
-	<div class="row">
-	   <div class="small-12 columns" id="dadamail_footer">
-			<p><small><!-- tmpl_var footer_props --></small></p>   
-		</div>
-	</div>
-<!-- /tmpl_if -->
-
+<!-- tmpl_include give_props_user_widget.tmpl -->
 
 
 
