--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -201,13 +201,20 @@
 	</div>
 
 
-	<!-- tmpl_if footer_props -->
 		<div class="row">
 		   <div class="small-12 columns" id="footer">
-				<p><small><!-- tmpl_var footer_props --></small></p>   
+				<p>
+					<a href="http://dadamailproject.com?you_are_beautiful_admin" target="_blank">
+						<img 
+							src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/powered_by_dada_mail.gif" 
+							width="278"
+							height="75"
+							style="border:1px solid black"
+						>
+					</a>
+				</p>   
 			</div>
 		</div>
-	<!-- /tmpl_if -->
 
 
 	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
