--- a/dada/templates/list_template_body_code_block.tmpl
+++ b/dada/templates/list_template_body_code_block.tmpl
@@ -33,13 +33,7 @@
 	<!-- /tmpl_if --> 
 <!-- /tmpl_if -->
 
-<!-- tmpl_if footer_props -->
-	<div class="row">
-	   <div class="small-12 columns" id="dadamail_footer">
-			<p><small><!-- tmpl_var footer_props --></small></p>   
-		</div>
-	</div>
-<!-- /tmpl_if -->
+<!-- tmpl_include give_props_user_widget.tmpl -->
 
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.topbar.js?v=<!-- tmpl_var VER escape=URL -->"></script>
