--- a/dada/templates/give_props_user_widget.tmpl
+++ b/dada/templates/give_props_user_widget.tmpl
@@ -1,7 +1,7 @@
 <!-- tmpl_if GIVE_PROPS_IN_HTML -->
 	<div class="right">
-			<p>
-				<a href="http://dadamailproject.com?you_are_beautiful_user" target="_blank">
+			<p style="margin:10px">
+				<a href="http://dadamailproject.com?you_are_a_beautiful_user" target="_blank">
 					<img 
 						src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/powered_by_dada_mail.gif" 
 						width="278"
