Let's make this match the list template

--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -201,8 +201,7 @@
 	</div>
 
 	<!-- tmpl_if GIVE_PROPS_IN_HTML -->
-		<div class="row">
-		   <div class="small-12 columns" id="footer">
+			<div class="right">
 				<p style="margin:10px">
 					<a href="http://dadamailproject.com?you_are_beautiful_admin" target="_blank">
 						<img 
@@ -211,9 +210,8 @@
 							height="75"
 							style="border:1px solid black"
 						>
-					</a>
-				</p>   
-			</div>
+				</a>
+			</p>   
 		</div>
 	<!-- /tmpl_if -->
 
