--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -200,7 +200,7 @@
 		</div>
 	</div>
 
-	<!-- tmpl_if GIVE_PROPS_IN_HTML -->
+	<!-- tmpl_if GIVE_PROPS_IN_ADMIN -->
 			<div class="right">
 				<p style="margin:10px">
 					<a href="http://dadamailproject.com?you_are_beautiful_admin" target="_blank">
