--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -211,6 +211,25 @@
  	<div class="large-3 medium-3 columns">
  	    <label 
  			class="medium-text-right"
+ 			for="list_phone_number"
+ 		>
+			Phone Number
+ 		</label>
+ 	</div>
+ 	<div class="large-9 medium-9 columns">
+      	<input 
+			type="tel" 
+			name="list_phone_number" 
+			id="list_phone_number" 
+			value="<!-- tmpl_var list_settings.list_phone_number escape="HTML" -->" 
+			>
+     </div>
+  </div>
+
+ <div class="row">
+ 	<div class="large-3 medium-3 columns">
+ 	    <label 
+ 			class="medium-text-right"
  			for="logo_image_url"
  		>
 			Logo Image URL <br>(200px by 50px)
