--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -98,6 +98,9 @@ $FILE_BROWSER_OPTIONS = {
 	core5_filemanager  => { 
 		enabled      => 0, 
 	},
+	rich_filemanager { 
+		enabled => 0,
+	}
 };
 
 =cut
