we'll make richfilemanager default. what could possible go wrong?!

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1039,13 +1039,24 @@
 					File Browsers/Uploaders
 				</h4>
 
+				<label for="install_file_browser_rich_filemanager">
+					<input 
+						type="radio"
+						name="install_file_browser" 
+						id="install_file_browser_rich_filemanager" 
+						value="rich_filemanager"
+						checked="checked"
+					>
+					Install Rich FileManager (default)
+				</label>
+
+
 				<label for="install_file_browser_kcfinder">
 					<input 
 						type="radio" 
 						name="install_file_browser"
 						id="install_file_browser_kcfinder" 
 						value="kcfinder" 
-						checked="checked"
 					>
 					Install KCFinder
 				</label>
