--- a/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
+++ b/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
@@ -16,7 +16,7 @@ $FILE_BROWSER_OPTIONS = {
 		upload_dir   => '<!-- tmpl_var i_kcfinder_upload_dir -->', 
 		upload_url   => '<!-- tmpl_var i_kcfinder_upload_url -->',
 		session_name => 'PHPSESSID', 
-		session_dir  => '<!-- tmpl_var i_session_dir -->',
+		session_dir  => '<!-- tmpl_var i_kcfinder_session_dir -->',
 	},
 	core5_filemanager  => { 
 		enabled      => <!-- tmpl_var i_core5_filemanager_enabled default="0" -->, 
@@ -26,6 +26,16 @@ $FILE_BROWSER_OPTIONS = {
 		upload_url   => '<!-- tmpl_var i_core5_filemanager_upload_url -->',
 		
 		connector    => '<!-- tmpl_var i_core5_filemanager_connector -->', 
+	},
+	
+	rich_filemanager  => { 
+		enabled      => <!-- tmpl_var i_rich_filemanager_enabled default="0" -->, 
+		url          => '<!-- tmpl_var i_rich_filemanager_url -->', 
+		upload_dir   => '<!-- tmpl_var i_rich_filemanager_upload_dir -->', 
+		upload_url   => '<!-- tmpl_var i_rich_filemanager_upload_url -->',
+		connector    => 'php', 
+		session_name => 'PHPSESSID', 
+		session_dir  => '<!-- tmpl_var i_session_dir -->',
 	},
 	
 };
