Changes for RichFileManager

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -71,6 +71,7 @@
 			<form 
 				target="_blank" 
 				action="<!-- tmpl_var Self_URL -->"
+				accept-charset="<!-- tmpl_var HTML_CHARSET -->"
 			> 
 				<input type="hidden" name="flavor" value="show_current_dada_config"> 
 				<input type="hidden" name="config_file" value = "<!-- tmpl_var configured_dada_config_file escape="HTML" -->"> 
