--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -167,7 +167,10 @@
 	</h3> 
 
 
-	<form action="<!-- tmpl_var submitted_PROGRAM_URL -->"> 
+	<form 
+		action="<!-- tmpl_var submitted_PROGRAM_URL -->"
+		accept-charset="<!-- tmpl_var HTML_CHARSET -->"
+	> 
 			<input 
 			type="submit" 
 			class="success large button expand" 
