We have to template this file out...

--- a/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
+++ b/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
@@ -35,7 +35,7 @@ $FILE_BROWSER_OPTIONS = {
 		upload_url   => '<!-- tmpl_var i_rich_filemanager_upload_url -->',
 		connector    => 'php', 
 		session_name => 'PHPSESSID', 
-		session_dir  => '<!-- tmpl_var i_session_dir -->',
+		session_dir  => '<!-- tmpl_var i_rich_filemanager_session_dir -->',
 	},
 	
 };
