update for v2.3.0 of RichFilemanager

--- a/dada/installer-disabled/templates/rich_filemanager_filemanager-config-json.tmpl
+++ b/dada/installer-disabled/templates/rich_filemanager_filemanager-config-json.tmpl
@@ -41,6 +41,10 @@
         "selection": {
             "enabled": true,
             "useCtrlKey": true
+        },
+        "renderer": {
+            "position": false,
+            "indexFile": "readme.md"
         }
     },
     "api": {
@@ -154,12 +158,28 @@
             "readerWidth": "640",
             "readerHeight": "480"
         },
+        "codeMirrorRenderer": {
+            "enabled": true,
+            "extensions": [
+                "php",
+                "java",
+                "txt",
+                "csv"
+            ]
+        },
+        "markdownRenderer": {
+            "enabled": true,
+            "extensions": [
+                "md"
+            ]
+        },
         "editable": {
             "enabled": true,
             "theme": "default",
             "lineNumbers": true,
             "lineWrapping": true,
             "codeHighlight": true,
+            "matchBrackets": true,
             "extensions": [
                 "txt",
                 "csv",
@@ -177,5 +197,5 @@
         "extra_js_async": true
     },
     "url": "https://github.com/servocoder/RichFilemanager",
-    "version": "2.2.2"
+    "version": "2.3.0"
 }
