--- a/dada/installer-disabled/templates/rich_filemanager_connector_config.tmpl
+++ b/dada/installer-disabled/templates/rich_filemanager_connector_config.tmpl
@@ -32,6 +32,12 @@ $config = [
      */
     "logger" => [
         "enabled" => false,
+        /**
+         * Default value "null".
+         * Full path to log file, e.g. "/var/log/filemanager/logfile".
+         * By default the application writes logs to "filemanager.log" file that located at sys_get_temp_dir()
+         */
+        "file" => null,
     ],
     /**
      * General options section
@@ -58,10 +64,7 @@ $config = [
          * - relative path in case `serverRoot` set to "true", e.g. "/filemanager/userfiles/"
          */
 	    "fileRoot" => "<!-- tmpl_var uploads_directory -->",
-	   /*
-	   "fileRoot" => false, 
-	   */
-	    /**
+        /**
          * Format of the date to display. See http://www.php.net/manual/en/function.date.php
          */
         "dateFormat" => "d M Y H:i",
@@ -135,6 +138,7 @@ $config = [
             "txt",
             "csv",
             "md",
+            "sh",
         ],
     ],
     /**
