Adds support for a Website URL

--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -246,7 +246,28 @@
      </div>
   </div>
   
-  
+
+<div class="row">
+	<div class="large-3 medium-3 columns">
+	    <label 
+			class="medium-text-right"
+			for="website_url"
+		>
+         	Website URL
+		</label>
+	</div>
+	<div class="large-9 medium-9 columns">
+     	<input 
+			type="text" 
+			name="website_url" 
+			id="website_url" 
+			value="<!-- tmpl_var list_settings.website_url escape="HTML" -->"
+			placeholder="https://"
+		>
+    </div>
+ </div>  
+
+
 
 <div class="row">
 	<div class="large-3 medium-3 columns">
